--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "cypress-csv2html-plugin",
-  "version": "2.0.1",
-  "description": "A simple plugin to generate HTML table from CSV file by using cy.csv2html('/fixtures/yourfile.csv'), all the data is randomly generated",
+  "version": "2.1.0",
+  "description": "A simple plugin to generate HTML table from CSV file by using cy.csv2html('cypress/fixtures/yourfile.csv'), all the data in the example is randomly generated",
   "main": "src",
   "files": [
     "src",
