--- a/package.json
+++ b/package.json
@@ -34,5 +34,17 @@
     "prettier": "^3.3.2",
     "semantic-release": "^24.0.0",
     "typescript": "^5.6.3"
+  },
+  "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@fontsource/roboto": "^5.1.1",
+    "@mui/icons-material": "^6.4.5",
+    "@mui/material": "^6.4.5",
+    "@mui/styled-engine-sc": "^6.4.3",
+    "cypress-csv2html-plugin": "2.0.3",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "styled-components": "^6.1.15"
   }
 }
